# cthyb-ohmic

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_INSTALLATION.md  cmake_input.sh  combinatorial.hpp  hyb.hpp  hybblasmatrix.hpp  hybconfig.cpp  hybconfig.hpp  hybdissipation.cpp  hybdissipation.hpp  hybevaluate.cpp  hybevaluate.hpp  hybfun.cpp  hybfun.hpp  hybfun_env.cpp  hybfun_env.hpp  hybint.hpp  hyblocal.cpp  hyblocal.hpp  hybmain.cpp  hybmatrix.cpp  hybmatrix.hpp  hybmatrix_env.cpp  hybmatrix_env.hpp  hybmatrix_ft.cpp  hybmeasurements.cpp  hybretintfun.hpp  hybsegment.hpp  hybsim.cpp  hybupdates.cpp  tutorial1-Leo.py
utilities/: Dockerfile  IPython+pyalps.ipynb  IPython+pyalps.sh  README_INSTALLATION  README_INSTALLATION.md  build_cthyb_ohmic_image.sh  chi_vs_T_vs_U_v5.1.py  chi_vs_T_vs_U_v5.5.py  chi_vs_T_vs_U_v5.6.py  chi_vs_T_vs_U_v5.7.py  chi_vs_T_vs_U_v5.82.py  chi_vs_T_vs_U_v5.85.py  chi_vs_T_vs_U_v5.86.py  chi_vs_T_vs_U_v5.87.py  chi_vs_T_vs_U_v5.88.py  cmake_input.sh  cmake_input_ci-connect.sh  cmake_input_grads-bd.sh  cmake_input_hdf5.sh  cthyb_ohmic.Singularity  extrapolate_conductance.py  extrapolate_conductance_barycentric_v1.16.py  extrapolate_conductance_spline_v1.17.py  extrapolate_conductance_spline_v1.18.py  extrapolate_conductance_v1.11.py  extrapolate_conductance_v1.12.py  extrapolate_conductance_v1.12_b.py  extrapolate_conductance_v1.14_a.py  extrapolate_conductance_v1.15.py  hyb_config.py  hyb_config_v1.py  k_vs_T_vs_mu_v5.1.py  n_vs_mu_vs_T_v4.0.py  n_vs_mu_vs_T_v5.1.py  n_vs_mu_vs_T_v5.2.py  n_vs_mu_vs_T_v5.5.py  n_vs_mu_vs_T_v5.6.py  n_vs_mu_vs_T_v5.7.py  n_vs_mu_vs_T_v5.8.py  n_vs_mu_vs_T_v5.81.py  (+16 more)
